@startuml
'https://plantuml.com/class-diagram

class MyStream <T>{
    + void addEvent(T t)
    + void addListener(MyStreamListener listener)
    + void removeListener(MyStreamListener listener)
}

interface MyStreamListener <T>{
    + void listen(T t)
}

class Cilent{}

class DataAccess{
    - List<MonHoc> listMH
    + add(MonHoc m)
    + delete(MonHoc m)
}

MyStream <-- Cilent : stream
MyStream o--> MyStreamListener : listeners
MyStreamListener <|.. Cilent
DataAccess --> MyStream : stream

@enduml